--- a/static/bootstrap/css/style_izabela.css
+++ b/static/bootstrap/css/style_izabela.css
@@ -17,6 +17,10 @@
 
 .content-box{width:100%}
 
+.situacao-box{width:960px;background:#e5e5e5;float:left;margin:20px 0 0 20px;border:1px solid #b5b5b5;padding:20px;}
+.situacao-box h1{font:26px Arial;color:black}
+.situacao-inset-box{background:linear-gradient(to top, #DADADA, #FFFFFF);border:1px solid #b5b5b5;border-left:15px solid #0061B2;margin:20px 0 0 0;}
+
 .left-menu-box{float:left;width:290px;}
 .left-menu-box .logo-tmt-box{margin:20px 0 0 40px;float:left;}
 .left-menu-box .logo-izabela-box{margin:60px 0 0 40px;float:left;}
