--- a/static/bootstrap/css/style_izabela.css
+++ b/static/bootstrap/css/style_izabela.css
@@ -35,6 +35,8 @@
 .main-content{float:left;min-height:620px;width:1050px;border-left:1px solid #aaa}
 .num{background:#f00;padding:2px 4px;float:left;border-radius:.2em;font:15px arial;color:#ffffff;}
 
+.head-item{width:100px;float:left;text-align:center;padding:0 20px;font:11px arial;font-style:italic;}
+
 .menu{width:210px;margin:10px 0 0 0;}
 .menu ul{list-style: none;width:100%;}
 .menu ul li{width:100%}
@@ -54,17 +56,18 @@
 .btn-send-photo:hover{opacity:.8;cursor:pointer}
 .right-next p{width:315px}
 
-.item-aviso{background:url(../../img/linear-table-1.png);height:106px;border:1px solid #aaaaaa;border-left:9px solid #0965AF;cursor:pointer;margin:10px 0 0 0;}
+.item-aviso{background:url(../../img/linear-table-1.png);height:106px;border:1px solid #aaaaaa;border-left:9px solid #0965AF;cursor:pointer;margin:0 0 10px 0;}
 .item-aviso:hover{box-shadow: 0 0 10px #999999}
 .item-line-aviso{float:left;text-align:center;height:81px;border-right:1px solid #aaa;margin:12.5px 0 0 0;padding: 0 20px;}
 
 .box-img-pessoa{float:left;position:relative;margin:35px 0 0 20px;background:#EFEFEF;border:1px solid #B5B5B5;padding:15px 20px}
 .box-img-pessoa p{font:12px arial;font-weight:bold;color:#005FB2;margin: 0 0 10px 5px;font-style:italic;}
-.btn-img-pessoa{background:linear-gradient(to top, #CBCBDA, #FDFDFD);border:1px solid #959595;font:11px arial;color:#333333;position:absolute;height:19px;width:83px;top:175px;left:60px;border-top-left-radius:.6em;border-top-right-radius:.6em;cursor:pointer;outline:none;}
+.btn-img-pessoa{background:linear-gradient(to top, #CBCBDA, #FDFDFD);border:1px solid #959595;font:11px arial;color:#333333;position:absolute;height:19px;width:83px;top:176px;left:60px;border-top-left-radius:.6em;border-top-right-radius:.6em;cursor:pointer;outline:none;}
 .btn-img-pessoa:hover{opacity:.8;}
 
-.alert-send-image{width:50%;background:#0061B2;float:left;}
-.alert-send-image p{font:12px Arial;color:white;}
+.alert-send-image{width:760px;background:#0061B2;float:left;padding:10px;margin:0 0 10px 0}
+.alert-send-image img{float:left}
+.alert-send-image p{font:12px Arial;color:white;width:90%;float:left;margin:0 0 0 20px;}
 
 .menu-usuario{position:absolute;top:15px;right:0;width:175px}
 .menu-usuario .pagina-inicial{float:right;width:170px;padding:7px 0;border-bottom:1px solid #aaaaaa;}
@@ -79,8 +82,10 @@
 .menu-usuario .sair-link{margin:0 0 0 0;font:13px Arial;text-decoration:none;color:black;float:right;width:160px;cursor:pointer;text-align:right;padding:7px 10px 7px 0;display:none}
 .menu-usuario .sair-link:hover{background:#eeeeee;}
 
-.item-solics{background:url(../../img/linear-table-2.png);height:106px;border:1px solid #aaaaaa;border-left:9px solid #0965AF;cursor:pointer;margin:10px 0 0 0;}
+.item-solics{background:url(../../img/linear-table-2.png);height:106px;border:1px solid #aaaaaa;border-left:9px solid #0965AF;cursor:pointer;margin:0 0 10px 0;}
 .item-solics:hover{box-shadow: 0 0 10px #999999}
+
+.j-alert-error{padding:10px;width:700px;background:#eee;font:12px arial;color:#333333;margin:10px 0 0 0;}
 
 .btn-conf-iza{float:right;background:#0061B2;padding:2px 15px;height:38px;border:none;font:16px Arial;color:#ffffff;border-bottom:6px solid #0A3D9B;cursor:pointer;margin:0 0 0 10px}
 .btn-cancel-iza{float:right;background:#FF0000;padding:2px 15px;height:38px;border:none;font:16px Arial;color:#ffffff;border-bottom:6px solid #A40000;cursor:pointer}
@@ -88,10 +93,10 @@
 .btn-cancel-iza:hover{opacity:.8}
 
 .modal-photo{width:100%;height:100%;position:fixed;z-index:2;background:rgba(0,0,0,.7);display:none}
-.box-photo{width:764px;height:422px;background:white;border-radius:.8em;margin:10% auto}
+.box-photo{width:764px;height:422px;background:white;border-radius:.8em;margin:10% auto;padding:10px 0 0 0;}
 .btn-close-box{width:25px;height:25px;border:none;background:url(../../img/btn-close-box.png) no-repeat;cursor:pointer;outline:none;float:right;margin:5px}
 .btn-close-box:hover{opacity:.8}
-.header-modal-photo{width:724px;margin:8px auto;padding:10px 0;text-align:center;color:white;font:22px Arial;font-weight:lighter;background:#0965AF}
+.header-modal-photo{width:724px;margin:30px auto;padding:10px 0;text-align:center;color:white;font:22px Arial;font-weight:lighter;background:#0965AF}
 .content-modal-photo{width:724px;border:1px solid #b5b5b5;margin:20px auto 0 auto;background:#EEEEEF;padding:0 0 30px 0}
 .btn-take-photo{height:76px;width:406px;background:url(../../img/btn-photo.png) no-repeat;border:none;margin:0;cursor:pointer;outline:none}
 .btn-file-photo{height:76px;width:406px;background:url(../../img/btn-photo.png) no-repeat;background-position:0 -76px;border:none;margin:0;cursor:pointer;outline:none}
