--- a/static/css/style_izabela.css
+++ b/static/css/style_izabela.css
@@ -245,3 +245,31 @@ section.right-container{
 [data-color='gray']{
 	color:#555;
 }
+
+div.img-show{
+	top:50px;
+	left:120px;
+	display:none;
+	height:300px;
+	width:300px;
+	position:absolute;
+	border-radius:5px;
+	box-shadow: 0 0 20px black;
+}
+div.img-show--close{
+	cursor: pointer;
+	content:'×';
+	display:block;
+	height:20px;
+	width:20px;
+	background:rgba(204, 0, 0, 0.65);
+	right:0;
+	position:absolute;
+	border-radius:360px;
+	line-height:20px;
+	font-size:14px;
+	font-weight:bold;
+	font-family:"Trebuchet MS";
+	color:white;
+	box-shadow:0 0 10px black;
+}
