--- a/static/css/style_izabela.css
+++ b/static/css/style_izabela.css
@@ -115,7 +115,7 @@ body{
 .btn-cancel-iza:hover{opacity:.8}
 
 .modal-photo{width:100%;height:100%;position:fixed;z-index:2;background:rgba(0,0,0,.7);display:none;left:0;top:0;right:0;bottom: 0;}
-.box-photo{width:764px;height:422px;background:white;border-radius:.8em;margin:10% auto;padding:10px 0 0 0;}
+.box-photo{width:764px;height:450px;background:white;border-radius:.8em;margin:10% auto;padding:10px 0 0 0;}
 .btn-close-box{width:25px;height:25px;border:none;background:url(../img/btn-close-box.png) no-repeat;cursor:pointer;outline:none;float:right;margin:5px}
 .btn-close-box:hover{opacity:.8}
 .header-modal-photo{width:724px;margin:30px auto;padding:10px 0;text-align:center;color:white;font:22px Arial;font-weight:lighter;background:#0965AF}
@@ -283,3 +283,25 @@ div.img-show--close{
     margin:0 auto;
     width: 500px;
 }
+
+
+.btn-default-izabela{
+    background:#0061B2;
+    padding:2px 15px;
+    height:38px;
+    border:none;
+    font:16px Arial;
+    color:#ffffff;
+    border-bottom:6px solid #0A3D9B;
+    cursor:pointer;
+    box-sizing:border-box;
+}
+.btn-default-izabela:active{
+    position: relative;
+    top: 1.5px;
+}
+
+.wm-text-center{
+    text-align: center;
+}
+
