--- a/static/css/style_izabela.css
+++ b/static/css/style_izabela.css
@@ -115,7 +115,7 @@ body{
 .btn-cancel-iza:hover{opacity:.8}
 
 .modal-photo{width:100%;height:100%;position:fixed;z-index:2;background:rgba(0,0,0,.7);display:none;left:0;top:0;right:0;bottom: 0;}
-.box-photo{width:764px;height:auto;background:white;border-radius:.8em;margin:0% auto;padding:10px 0 0 0;}
+.box-photo{width:764px;height:auto;background:white;border-radius:.8em;margin:8% auto;padding:10px 0 25px 0;}
 .btn-close-box{width:25px;height:25px;border:none;background:url(../img/btn-close-box.png) no-repeat;cursor:pointer;outline:none;float:right;margin:5px}
 .btn-close-box:hover{opacity:.8}
 .header-modal-photo{width:724px;margin:30px auto;padding:10px 0;text-align:center;color:white;font:22px Arial;font-weight:lighter;background:#0965AF}
