--- a/static/css/style_izabela.css
+++ b/static/css/style_izabela.css
@@ -1,4 +1,4 @@
-*{margin:0;padding:0}
+    *{margin:0;padding:0}
 body{
     font-family: Arial;
 }
@@ -32,7 +32,7 @@ body{
 .solics:hover{background: url(../img/solics.png)}
 .solics:hover h1{color:#fff;}
 .solics h1{float:right;margin:10px 0 0 0;font:26px arial;color:#005FB2;font-weight: bolf}
-.solicsHovered{width:429px;height:73px;border-right:1px dotted #aaaaaa;padding:10px 0 0 0;float:left;margin:20px 0 0 20px;background: url(../img/solics.png)}
+.solicsHovered{width:429px;height:73px;padding:10px 0 0 0;float:left;margin:20px 0 0 20px;background: url(../img/solics.png)}
 .solicsHovered h1{float:right;margin:10px 0 0 0;font:26px arial;color:#ffffff;font-weight: bolf}
 
 .main-content{float:left;min-height:620px;width:1050px;border-left:1px solid #aaa}
