--- a/static/css/style_izabela.css
+++ b/static/css/style_izabela.css
@@ -65,7 +65,7 @@ body{
 
 .box-img-pessoa{float:left;position:relative;margin:35px 0 0 20px;background:#EFEFEF;border:1px solid #B5B5B5;padding:15px 20px}
 .box-img-pessoa p{font:12px arial;font-weight:bold;color:#005FB2;margin: 0 0 10px 5px;font-style:italic;}
-.btn-img-pessoa{background:linear-gradient(to top, #CBCBDA, #FDFDFD);border:1px solid #959595;font:11px arial;color:#333333;position:absolute;height:19px;width:83px;top:176px;left:60px;border-top-left-radius:.6em;border-top-right-radius:.6em;cursor:pointer;outline:none;}
+.btn-img-pessoa{background:linear-gradient(to top, #CBCBDA, #FDFDFD);border:1px solid #959595;font:11px arial;color:#333333;position:absolute;height:19px;width:83px;bottom:19px;left:60px;border-top-left-radius:.6em;border-top-right-radius:.6em;cursor:pointer;outline:none;}
 .btn-img-pessoa:hover{opacity:.8;}
 
 .alert-send-image{width:760px;background:#0061B2;float:left;padding:10px;margin:0 0 10px 0}
