--- a/static/css/style_izabela.css
+++ b/static/css/style_izabela.css
@@ -320,3 +320,78 @@ div.img-show--close{
     font-size: 10px;
     float: right;
 }
+
+/* 
+Recaptcha Style Captcha 
+=======================
+ re-Captcha Style Captcha with php and jQuery 
+ 
+ Created By: Zeeshan Rasool 
+ URL : http://www.99Points.info 
+ 
+ Get JQuery, PHP, AJAX, Codeigniter and MYSQL Tutorials and Demos on Blog
+ */
+ 
+#captcha-wrap{
+    border:solid #CCCCCC 1px;
+    width:175px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    border-radius: 10px;
+    background:#F6F6F6;
+    text-align:left;
+    padding:3px;
+    margin: 10px auto;
+    height:94px;
+}
+#captcha-wrap .captcha-box{
+    -webkit-border-radius: 7px;
+    background:#fff;
+    -moz-border-radius: 7px;
+    border-radius: 7px;
+    text-align:center;
+    border:solid #CCC 1px;
+    width:173px;
+    float:left;
+}
+#captcha-wrap .text-box{
+    -webkit-border-radius: 7px;
+    background:#F6F6F6;
+    -moz-border-radius: 7px;
+    width:140px;
+    height:53px;
+    float:left;
+    margin:4px;
+    border-radius: 7px;
+    text-align:center;
+    border:none;
+}
+ 
+#captcha-wrap .text-box input{ width:120px;}
+#captcha-wrap .text-box label{
+     color:#000000;
+     font-family: helvetica,sans-serif;
+     font-size:12px;    
+     width:150px;
+     padding-top:3px; 
+     padding-bottom:3px; 
+}
+#captcha-wrap .captcha-action{
+    float:right; width:117px; 
+    background:url(logos.jpg) top right no-repeat; 
+    height:44px; margin-top:3px;
+}
+#captcha-wrap  img#captcha-refresh{
+    margin-top:19px;
+    border:solid #333333 1px;
+    margin-right:6px;
+    cursor:pointer;
+}
+#captcha-code{
+    padding:5px;
+    background:#FFF;
+    -webkit-border-radius:5px 5px 5px 5px;
+    border-radius:5px 5px 5px 5px;
+    -moz-border-radius:5px 5px 5px 5px;
+    border:1px solid #CCCCCC;
+}
