--- a/static/css/adm_izabela/relatorios.css
+++ b/static/css/adm_izabela/relatorios.css
@@ -19,14 +19,15 @@
 	text-align: right;
 	color: #333333;
 }
-.dl-horizontal dt:hover{
-	color: #006699;
-}
 .dl-horizontal dd{ 
 	width: 50%;
 	float: right; 
 	color: #333333;
 }
-.dl-horizontal dd:hover{
+.dl-horizontal a:hover dt{
 	color: #006699;
+}
+.dl-horizontal a:hover dd{
+	color: #006699;
+	text-decoration: underline;
 }
